fix: fix z-index for enjoy block content

--- a/coffee-house/home/index.scss
+++ b/coffee-house/home/index.scss
@@ -8,7 +8,7 @@
 
   &__wrapper {
     border-radius: 40px;
-    z-index: -2;
+    z-index: 0;
     padding: 100px;
     background: url('../images/home/img-hero.jpg') lightgray 50% / cover
       no-repeat;
@@ -19,7 +19,7 @@
 
   &__content {
     position: relative;
-    z-index: -1;
+    z-index: 0;
     max-width: 530px;
   }
 
